RESOLVED FIXED115319
[WK2] Threads get stuck in NetworkProcess when canceling loads in WebProcess
https://bugs.webkit.org/show_bug.cgi?id=115319
Summary [WK2] Threads get stuck in NetworkProcess when canceling loads in WebProcess
Alexey Proskuryakov
Reported 2013-04-27 19:40:53 PDT
WebResourceLoader is not always correct when second-guessing whether to send a response to DidReceiveResponseWithCertificateInfo. <rdar://problem/13757687>
Attachments
proposed fix (5.44 KB, patch)
2013-04-27 19:49 PDT, Alexey Proskuryakov
no flags
Patch v2 (12.31 KB, patch)
2013-04-30 10:11 PDT, Brady Eidson
ap: review+
Alexey Proskuryakov
Comment 1 2013-04-27 19:49:58 PDT
Created attachment 199926 [details] proposed fix
WebKit Commit Bot
Comment 2 2013-04-27 20:21:56 PDT
Comment on attachment 199926 [details] proposed fix Clearing flags on attachment: 199926 Committed r149251: <http://trac.webkit.org/changeset/149251>
WebKit Commit Bot
Comment 3 2013-04-27 20:21:58 PDT
All reviewed patches have been landed. Closing bug.
Brady Eidson
Comment 4 2013-04-29 09:50:35 PDT
This re-introduced the crashed fixed in https://bugs.webkit.org/show_bug.cgi?id=115061 Also: "...alrady canceled..." ? :)
Alexey Proskuryakov
Comment 5 2013-04-29 11:10:52 PDT
Sadly, this means that the bug is much harder to fix - the null check being necessary means that we can't send messages back. Re-added the null check in <http://trac.webkit.org/r149298>.
Brady Eidson
Comment 6 2013-04-30 10:11:48 PDT
Created attachment 200126 [details] Patch v2 This patch was originally written by Alexey, reviewed by me, then tweaked and tested heavily by me... so I'll give him a chance to review back!
Alexey Proskuryakov
Comment 7 2013-04-30 10:15:24 PDT
Comment on attachment 200126 [details] Patch v2 View in context: https://bugs.webkit.org/attachment.cgi?id=200126&action=review > Source/WebKit2/WebProcess/Network/WebResourceLoader.cpp:112 > + // If m_coreLoader becomse null as a result of the didReceiveResponse callback, we can't use the send function(). Typo: becomse
Brady Eidson
Comment 8 2013-04-30 12:20:29 PDT
Note You need to log in before you can comment on or make changes to this bug.