<rdar://problem/13757687> Threads get stuck in NetworkProcess when canceling loads https://bugs.webkit.org/show_bug.cgi?id=115319

Reviewed by Darin Adler.

WebResourceLoader was second-guessing NetworkProcess as to whether it needs a response
to DidReceiveResponseWithCertificateInfo, and it was guessing wrong if the load was
alrady canceled on WebProcess side.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::didReceiveResponseAsync):
* WebProcess/Network/WebResourceLoader.cpp:
(WebKit::WebResourceLoader::didReceiveResponseWithCertificateInfo):
* WebProcess/Network/WebResourceLoader.h:
* WebProcess/Network/WebResourceLoader.messages.in:


Canonical link: https://commits.webkit.org/133740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149251 268f45cc-cd09-0410-ab3c-d52691b4dbfc